[package]
name = "work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.8.1"
futures = "0.3.30"
futures-util = "0.3.30"
mongodb = "2.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.35.1"
